--- a/InfiniteScrollAnotherPattern/Storyboard/Base.lproj/Main.storyboard
+++ b/InfiniteScrollAnotherPattern/Storyboard/Base.lproj/Main.storyboard
@@ -18,12 +18,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uZE-dk-hSU">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uZE-dk-hSU" customClass="CarouselScrollView" customModule="InfiniteScrollAnotherPattern" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="64" width="375" height="44"/>
                                 <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="qVk-tb-qTZ"/>
                                 </constraints>
+                            </scrollView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Dl-iX-mRJ" customClass="CarouselScrollView" customModule="InfiniteScrollAnotherPattern" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </scrollView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3x6-Jy-vg1">
                                 <rect key="frame" x="0.0" y="108" width="375" height="559"/>
@@ -75,6 +79,11 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="aeX-x6-jQf"/>
+                    <connections>
+                        <outlet property="carouselScrollView" destination="uZE-dk-hSU" id="02z-4E-ytL"/>
+                        <outlet property="paginateScrollView" destination="3x6-Jy-vg1" id="pcd-kp-h4m"/>
+                        <outlet property="selectionCarouselScrollView" destination="2Dl-iX-mRJ" id="OOT-rx-l7e"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
