--- a/InfiniteScrollAnotherPattern/Storyboard/Base.lproj/Main.storyboard
+++ b/InfiniteScrollAnotherPattern/Storyboard/Base.lproj/Main.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SXI-eF-PE6">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SXI-eF-PE6">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,73 +15,10 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uZE-dk-hSU" customClass="CarouselScrollView" customModule="InfiniteScrollAnotherPattern" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
-                                <color key="backgroundColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="qVk-tb-qTZ"/>
-                                </constraints>
-                            </scrollView>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Dl-iX-mRJ" customClass="CarouselScrollView" customModule="InfiniteScrollAnotherPattern" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </scrollView>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3x6-Jy-vg1">
-                                <rect key="frame" x="0.0" y="108" width="375" height="559"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tgx-PA-9gV">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="559"/>
-                                        <color key="backgroundColor" red="0.32156862749999998" green="0.79607843140000001" blue="0.32156862749999998" alpha="1" colorSpace="calibratedRGB"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XAg-Sf-B7T">
-                                        <rect key="frame" x="375" y="0.0" width="375" height="559"/>
-                                        <color key="backgroundColor" red="0.2470588235" green="0.7725490196" blue="0.8862745098" alpha="1" colorSpace="calibratedRGB"/>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XQ9-Cy-Qfi">
-                                        <rect key="frame" x="750" y="0.0" width="375" height="559"/>
-                                        <color key="backgroundColor" red="1" green="0.50196078430000002" blue="0.2274509804" alpha="1" colorSpace="calibratedRGB"/>
-                                    </view>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="tgx-PA-9gV" firstAttribute="top" secondItem="3x6-Jy-vg1" secondAttribute="top" id="3IK-5x-bdw"/>
-                                    <constraint firstItem="tgx-PA-9gV" firstAttribute="leading" secondItem="3x6-Jy-vg1" secondAttribute="leading" id="7dt-SP-WWS"/>
-                                    <constraint firstItem="XQ9-Cy-Qfi" firstAttribute="top" secondItem="3x6-Jy-vg1" secondAttribute="top" id="9FR-vg-NEl"/>
-                                    <constraint firstAttribute="bottom" secondItem="tgx-PA-9gV" secondAttribute="bottom" id="ILT-bN-dLr"/>
-                                    <constraint firstItem="XAg-Sf-B7T" firstAttribute="top" secondItem="3x6-Jy-vg1" secondAttribute="top" id="Kzd-DJ-ccK"/>
-                                    <constraint firstItem="XQ9-Cy-Qfi" firstAttribute="width" secondItem="3x6-Jy-vg1" secondAttribute="width" id="QOT-hJ-Fwu"/>
-                                    <constraint firstItem="XAg-Sf-B7T" firstAttribute="width" secondItem="3x6-Jy-vg1" secondAttribute="width" id="RQv-3v-6Z6"/>
-                                    <constraint firstAttribute="trailing" secondItem="XQ9-Cy-Qfi" secondAttribute="trailing" id="YOT-TR-8pv"/>
-                                    <constraint firstItem="XQ9-Cy-Qfi" firstAttribute="height" secondItem="3x6-Jy-vg1" secondAttribute="height" id="dsq-9X-TV9"/>
-                                    <constraint firstItem="tgx-PA-9gV" firstAttribute="width" secondItem="3x6-Jy-vg1" secondAttribute="width" id="gcQ-WN-Uda"/>
-                                    <constraint firstItem="XAg-Sf-B7T" firstAttribute="height" secondItem="3x6-Jy-vg1" secondAttribute="height" id="gln-Yk-IGI"/>
-                                    <constraint firstAttribute="bottom" secondItem="XQ9-Cy-Qfi" secondAttribute="bottom" id="mW1-yD-fI4"/>
-                                    <constraint firstAttribute="bottom" secondItem="XAg-Sf-B7T" secondAttribute="bottom" id="oTv-yV-Oko"/>
-                                    <constraint firstItem="XAg-Sf-B7T" firstAttribute="leading" secondItem="tgx-PA-9gV" secondAttribute="trailing" id="ppM-pH-PYI"/>
-                                    <constraint firstItem="XQ9-Cy-Qfi" firstAttribute="leading" secondItem="XAg-Sf-B7T" secondAttribute="trailing" id="t2g-R2-9o3"/>
-                                    <constraint firstItem="tgx-PA-9gV" firstAttribute="height" secondItem="3x6-Jy-vg1" secondAttribute="height" id="wH2-Cg-qRf"/>
-                                    <constraint firstItem="XAg-Sf-B7T" firstAttribute="leading" secondItem="tgx-PA-9gV" secondAttribute="trailing" id="yFS-oJ-MXH"/>
-                                </constraints>
-                            </scrollView>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="uZE-dk-hSU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8uP-cP-B1A"/>
-                            <constraint firstItem="3x6-Jy-vg1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YP7-tc-JSO"/>
-                            <constraint firstItem="uZE-dk-hSU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Zpj-Eb-dhj"/>
-                            <constraint firstAttribute="bottom" secondItem="3x6-Jy-vg1" secondAttribute="bottom" id="aMU-BK-FBf"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3x6-Jy-vg1" secondAttribute="trailing" id="ah0-Wp-QnV"/>
-                            <constraint firstItem="3x6-Jy-vg1" firstAttribute="top" secondItem="uZE-dk-hSU" secondAttribute="bottom" id="t1H-o3-7LY"/>
-                            <constraint firstItem="uZE-dk-hSU" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ude-et-oTF"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="aeX-x6-jQf"/>
-                    <connections>
-                        <outlet property="carouselScrollView" destination="uZE-dk-hSU" id="02z-4E-ytL"/>
-                        <outlet property="paginateScrollView" destination="3x6-Jy-vg1" id="pcd-kp-h4m"/>
-                        <outlet property="selectionCarouselScrollView" destination="2Dl-iX-mRJ" id="OOT-rx-l7e"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -94,7 +29,7 @@
             <objects>
                 <navigationController id="SXI-eF-PE6" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1r5-wi-xIR">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
