--- a/InfiniteScrollAnotherPattern/Interfaces/Storyboard/Main/Base.lproj/MainViewController.storyboard
+++ b/InfiniteScrollAnotherPattern/Interfaces/Storyboard/Main/Base.lproj/MainViewController.storyboard
@@ -33,13 +33,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Zo-CM-gIW">
+                                <rect key="frame" x="87.5" y="55" width="200" height="26"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="ADo-xR-QD1"/>
+                                    <constraint firstAttribute="height" constant="26" id="bnL-GC-YEy"/>
+                                </constraints>
+                            </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="T6f-Vw-KF7">
                                 <rect key="frame" x="0.0" y="44" width="375" height="48"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="vkw-qz-eON"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uWZ-Od-yft">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uWZ-Od-yft">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -47,14 +55,6 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Zo-CM-gIW">
-                                <rect key="frame" x="87.5" y="54" width="200" height="28"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="ADo-xR-QD1"/>
-                                    <constraint firstAttribute="height" constant="28" id="bnL-GC-YEy"/>
-                                </constraints>
-                            </view>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tIY-hb-NB5">
                                 <rect key="frame" x="0.0" y="92" width="375" height="575"/>
                                 <connections>
@@ -65,9 +65,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="tIY-hb-NB5" firstAttribute="top" secondItem="4Zo-CM-gIW" secondAttribute="bottom" constant="10" id="3pQ-K3-PET"/>
+                            <constraint firstItem="tIY-hb-NB5" firstAttribute="top" secondItem="4Zo-CM-gIW" secondAttribute="bottom" constant="11" id="3pQ-K3-PET"/>
                             <constraint firstItem="T6f-Vw-KF7" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Is4-Gu-Efz"/>
-                            <constraint firstItem="4Zo-CM-gIW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="O7C-8p-sQ6"/>
+                            <constraint firstItem="4Zo-CM-gIW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="11" id="O7C-8p-sQ6"/>
                             <constraint firstItem="tIY-hb-NB5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="RFo-Pd-3xD"/>
                             <constraint firstItem="T6f-Vw-KF7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="TBp-Ky-2ON"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tIY-hb-NB5" secondAttribute="trailing" id="Ub5-P1-8GH"/>
@@ -92,7 +92,7 @@
         <!--Page View Controller-->
         <scene sceneID="4r6-CY-Tu8">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="EVj-m5-Wn4" sceneMemberID="viewController"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="EVj-m5-Wn4" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4OO-jd-EbG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1026" y="156"/>
