--- a/InfiniteScrollAnotherPattern/Interfaces/View/CategoryTabCollectionViewCell/CategoryTabCollectionViewCell.xib
+++ b/InfiniteScrollAnotherPattern/Interfaces/View/CategoryTabCollectionViewCell/CategoryTabCollectionViewCell.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -28,7 +27,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="XFw-yv-Scw" secondAttribute="trailing" id="KzJ-yQ-MOL"/>
                             <constraint firstItem="XFw-yv-Scw" firstAttribute="leading" secondItem="mvj-Fn-CqQ" secondAttribute="leading" id="MYG-bD-LCU"/>
@@ -39,6 +38,7 @@
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="mvj-Fn-CqQ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="3lS-HN-8mP"/>
                 <constraint firstAttribute="bottom" secondItem="mvj-Fn-CqQ" secondAttribute="bottom" id="5dX-R3-L7g"/>
@@ -51,9 +51,4 @@
             <point key="canvasLocation" x="76.811594202898561" y="87.723214285714278"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
